--- a/styles.css
+++ b/styles.css
@@ -296,3 +296,40 @@ position: absolute;
     padding: 20px;
     margin-top: 100px;
 }
+.project h1{
+    margin-top: 50px;
+    color: brown;
+   margin-bottom: 10px;
+}
+.title_agenda{
+    text-decoration: underline;
+    text-decoration: rgb(173, 230, 179);
+    text-transform: uppercase;
+    font-weight: bold;
+    text-emphasis-color: red;
+    color: brown;
+}
+.description{
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.video_agenda{
+    margin-top: 50px;
+}
+
+iframe {
+    width: 100%;
+    height: 500px;
+    border: 2px solid black;
+    background-color: #f7f7f7;
+  border-radius: 10px; 
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3); 
+   opacity: 0.8;
+   margin-bottom: 20px;
+
+  /* transform: scale(1.1); */
+  } 
+  iframe:hover{
+    border-radius: 50px;
+    
+  }
