--- a/styles.css
+++ b/styles.css
@@ -169,27 +169,58 @@
 .skill{
     width: 200px;
     height: 6px;
+    margin-left: 10px;
     background-color: red;
     
 }
 .hundered{
     width: 100px;
     height: 6px;
+    margin-left: 10px;
+
     background-color: yellow;
     }
 .t5{
     width: 65px;
     height: 6px;
+    margin-left: 10px;
+
     background-color: aqua;
     }
 .others{
     width: 50px;
     height: 6px;
+    margin-left: 10px;
     background-color: green;
     
 }
+.java{
+    width: 90px;
+    height: 6px;
+    margin-left: 10px;
+    background-color: rgb(0, 49, 128);
+}
+.js{
+    margin-left: 10px;
+    width: 50px;
+    height: 6px;
+    background-color: rgb(128, 77, 0);
+}
+.nodejs{
+    margin-left: 10px;
+    width: 100px;
+    height: 6px;
+    background-color: rgb(0, 128, 122);
+}
+.c_lang{
+    width: 80px;
+    height: 6px;
+    margin-left: 10px;
+    background-color: rgb(128, 0, 100);
+}
 .c-plus-lang{
     width: 120px;
+    margin-left: 10px;
     height: 6px;
     background-color: brown;
 }
@@ -201,13 +232,24 @@
 .c_lang{
     width: 80px;
     height: 6px;
+    margin-left: 10px;
     background-color: darkturquoise;
 }
 .t4{
     width:150px;
     height: 6px;
+    margin-left: 10px;
     background-color: pink;
 }
+.tit_story{
+    margin-top: 30px;
+    font-size: 30px;
+    color: brown;
+    margin-left: 10px;
+ }
+ .lang_story_content{
+  margin-left: 10px;
+ }
 
 .hamburger{
     position: absolute;
